--- a/KittyHaven/include/admin.css
+++ b/KittyHaven/include/admin.css
@@ -1,20 +1,26 @@
-.catCard {
+#catsList{
+    margin-bottom: 50px;
+}
+.catPicContainer {
     width: 100%;
-    margin: 0 ;
+    margin: 5px 15px;
     overflow: hidden;
     background: #000000;
     border: none;
+    padding: 0;
 }
 
-.catCard img {
+.catPicContainer img {
     opacity: 0.7;
     width: 100%;
     margin: 0;
     transform: scale(1);
     transition: transform 0.5s, opacity 0.5s;
+    object-fit: fill;
+    height: 30vh;
 }
 
-.catDescriptionWrap {
+.catDescriptionContainer {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -31,25 +37,25 @@
     transition: opacity .2s, visibility .2s;
 }
 
-.catWrap:hover .catDescriptionWrap {
-    visibility: visible;
-    opacity: 1;
-}
-
-.catWrap:hover img {
-    width: 100%;
-    margin: 0;
-    height: auto;
-    transform: scale(1.05);
-    opacity: 1;
-}
-
 .catDescription {
     transition: .2s;
     transform: translateY(1em);
 }
 
-.catWrap:hover .catDescription {
+.catPicContainer:hover .catDescriptionContainer {
+    visibility: visible;
+    opacity: 1;
+}
+
+.catPicContainer:hover img {
+    width: 100%;
+    margin: 0;
+    height: 30vh;
+    transform: scale(1.05);
+    opacity: 1;
+}
+
+.catPicContainer:hover .catDescription {
     transform: translateY(0);
 }
 
@@ -66,6 +72,7 @@
     font-size: 25px;
     padding-bottom: 10px;
     border-bottom: 1px solid #ff60c7;
+    margin-left: 10vw;
 }
 
 .addBtn{
@@ -74,9 +81,11 @@
     border: 1px solid #FBBBE4;
     padding: 5px;
     border-radius: 5%;
-    font-size: 25px;
+    font-size: 20px;
     text-decoration: none;
+    margin-top: 10px;
     transition: color 0.2s, border-color 0.2s;
+    margin-right: 10vw;
 }
 
 .addBtn:hover{
@@ -96,4 +105,41 @@
 
 .catForm{
     margin-top: 10vh;
+}
+
+.catForm textarea#description {
+    margin-left: 15px;
+}
+
+.sucessText{
+    position: absolute;
+    top: 40%;
+    left: 40%;
+}
+
+.errorTxt{
+    color: #f32121;
+    font-weight: bold;
+    font-size: 30px;
+    display: none;
+}
+
+.btns a{
+    margin-left: 15px;
+}
+
+.btns:first-child{
+    margin-left: 0px;
+}
+
+.controls{
+    margin-bottom: 50px;
+}
+
+@media(max-width:768px) and (min-width:500px)
+{
+    .catPicContainer img,
+    .catPicContainer:hover img  {
+        height: 150px;
+    }
 }
