--- a/KittyHaven/include/landing.css
+++ b/KittyHaven/include/landing.css
@@ -112,7 +112,7 @@ header {
 }
 
 #logo{
-    background: url(../../images/logo.png) no-repeat left;
+    background: url(../images/logo.png) no-repeat left;
     background-size: contain;
     height: 100px ;
     width: 100px;
@@ -120,7 +120,7 @@ header {
 }
 
 #blacklogo{
-    background: url(../../images/blacklogo.png) no-repeat left;
+    background: url(../images/blacklogo.png) no-repeat left;
     background-size: contain;
     height: 50px;
     width: 50px;
