--- a/KittyHaven/include/landing.css
+++ b/KittyHaven/include/landing.css
@@ -271,7 +271,7 @@ footer p{
         width:78vw;
     }
     .catPicContainer img{
-        max-height: 100%;
+        max-height: 30vh;
     }
     .col{
         padding-left: 4.6vw;
@@ -279,9 +279,6 @@ footer p{
     }
     .pics-features #r2{
         margin-top: 0;
-    }
-    .button:link, .button:visited{
-        margin-left: 15vw;
     }
 
     .slogan-text-box {
