--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -35,6 +35,26 @@ footer{
     width: 100%;
 }
 
+footer {
+    position: fixed;
+    background-color: #272727;
+    color: #686868;
+    bottom: 0px;
+}
+
+main{
+    margin-top:50px;
+}
+
+footer p{
+    margin: 0;
+    margin: 10px;
+}
+
+.header{
+    margin-top: 15vh;
+}
+
 .wrapper{
     margin: 0 auto;
     width: 85vw;
@@ -114,9 +134,6 @@ footer{
     background: #fed9f1;
 }
 
-.header{
-    margin-top: 15vh;
-}
 
 .sticky{
     position: fixed;
@@ -136,22 +153,6 @@ footer{
 
 .sticky .logo { display:none; }
 .sticky .blacklogo{ display: block; }
-
-footer {
-    position: fixed;
-    background-color: #272727;
-    color: #686868;
-    bottom: 0px;
-}
-
-main{
-    margin-top:50px;
-}
-
-footer p{
-    margin: 0;
-    margin: 10px;
-}
 
 a:hover.dropdown-item{
     background-color: #fed9f1;
@@ -312,8 +313,6 @@ textarea:focus{
 .container.header{
     height: auto;
     margin-top: 15vh;
-    padding-right: 0;
-    padding-left: 0;
 }
 
 .container.header h1{
@@ -354,7 +353,7 @@ textarea:focus{
 /*cat form css for updating or adding new*/
 /*-----------------------------*/
 .catForm{
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 
 .catForm .label{
@@ -450,9 +449,7 @@ a{
     color: #000000;
 }
 
-.text{
-    padding-top: 2vh;
-}
+
 
 .navList{
     height:100%;
@@ -489,6 +486,7 @@ a{
 
 .text{
     margin-bottom: 30px;
+    padding-top: 2vh;
 }
 
 .ui-state-active{
@@ -584,6 +582,9 @@ margin: 10px 0  0 0 !important;
     .catPicContainer:hover img  {
         height: 150px;
     }
+    .col-md-2{
+        max-width: 100%;
+    }
 }
 
 @media (max-width:767px){
@@ -625,5 +626,8 @@ margin: 10px 0  0 0 !important;
     .modal-dialog {
         max-width: 50vw;
         margin: 1.75rem auto;
+    }
+    .kittyPic{
+        margin-bottom: 30px;
     }
 }
