--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -503,6 +503,39 @@ a{
 margin: 10px 0  0 0 !important;
 }
 
+.events{
+    float: right;
+    background: #ffffff;
+    color: #FDA7DF;
+    border: 1px solid #FBBBE4;
+    padding: 5px;
+    border-radius: 5%;
+    font-size: 20px;
+    text-decoration: none;
+    transition: color 0.2s, border-color 0.2s;
+    margin-left: 10px;
+}
+.events:hover{
+    color: #fc92d7;
+    border-color: #ff8fd6;
+    text-decoration: none;
+}
+
+.events.mem{
+    float:left;
+    margin-bottom: 30px;
+    font-size: 15px;
+    margin-left:0px;
+    margin-right: 10px;
+    bottom: 0px;
+}
+
+.warnningMessage{
+    color: #f32121;
+    font-weight: bold;
+    display: none;
+}
+
 /*-----------------------------*/
 /*Memories*/
 /*-----------------------------*/
@@ -513,7 +546,6 @@ margin: 10px 0  0 0 !important;
 
 .pagesPictures{
     position: absolute;
-    bottom:0;
     width: 40%;
     padding-top:10vh;
 }
