--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -466,6 +466,7 @@ textarea:focus{
     height: 10vh;
     width: 10vh;
     float: right;
+    margin-bottom: 5vh;
 }
 
 
@@ -730,6 +731,18 @@ margin: 10px 0  0 0 !important;
 
     .errorTxt{
         font-size: 25px;
+    }
+
+    .addBtn{
+        float: none;
+        font-size:15px;
+        margin-right: 0px;
+        margin-left: 30vw;
+    }
+
+    .header h1{
+        font-size: 20px;
+        margin-left: 5vw;
     }
 }
 
