--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -698,6 +698,7 @@ margin: 10px 0  0 0 !important;
 @media (max-width:767px){
     .borderLine{
         width:100%;
+        margin-top: 5vh;
     }
 
     .navList{
